--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -1,3 +1,23 @@
-body{
+*{
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  scroll-behavior:smooth ;
+  list-style: none;
+  text-decoration: none;
+}
+
+:root{
+  --main-color:#bc9697;
+  --second-color:#edeae3;
+  --text-color:#1b1b1b
+  --bg-color:#fff;
+}
+
+img{
+  width: 100%;
+}
+
+body{
+  color: var(--text-color);
 }
