--- a/front-end/src/components/header/header2.css
+++ b/front-end/src/components/header/header2.css
@@ -64,9 +64,15 @@ body{
     display: none;
 }
 
+.search-box.active{
+    top: 110%;
+    box-shadow: 2px 2px 10px 4px rgb(14 55 54 / 15%);
+    transition: 0.2s all linear;
+}
+
 .search-box{
     position: absolute;
-    top: 100%;
+    top: -100%;
     left: 50%;
     transform: translate(-50%);
     background-color: #fff;
