--- a/front-end/src/components/footer/footer2.css
+++ b/front-end/src/components/footer/footer2.css
@@ -30,8 +30,9 @@
 }
 
 .social a :hover{
-    color: #fff;
-    background-color: #bc9667;
+    color: #bc9667;
+    /* background-color: #bc9667; */
+    
 }
 
 .footer-box h3{
