--- a/front-end/src/components/header/header2.css
+++ b/front-end/src/components/header/header2.css
@@ -10,14 +10,19 @@ body{
     right: 0;
     z-index: 999;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     padding: 18px 100px;
     transition: 0.5s linear;
     background-color: #1b1b1b;
 }
 
-.logo{
+header.shadow{
+    background-color: #1b1b1b;
+    box-shadow: 2px 2px 10px 4px rgb(14 55 54 / 15%);
+}
+
+.logo img{
     width: 60px;
 
 }
