--- a/front-end/src/components/css/styles.css
+++ b/front-end/src/components/css/styles.css
@@ -5,7 +5,7 @@
     align-items: center;
     justify-content: center;
     color: white;
-    background-image: linear-gradient(79deg,#7439db,#C66FBC 48%,#f7944d);
+    background-image: linear-gradient(79deg,#1b1b1b,#bc9667 48%,#edeae3);
   }
 
   
