--- a/front-end/src/components/cart/cart.css
+++ b/front-end/src/components/cart/cart.css
@@ -15,34 +15,36 @@ table{
 
     width: 100%;
 
+    border: 4px solid black;
     display: table;
     border-collapse: separate;
     box-sizing: border-box;
     text-indent: initial;
     border-spacing: 2px;
-    border-color: red;
 }
 
 .top-cart{
     margin-bottom: 50px;
 }
-tbody{
+.top-cart tbody{
 
     display: table-row-group;
     vertical-align: middle;
     border-color: inherit;
 }
-tbody>tr{
-    height: 10rem;
-    border-bottom: 1px solid black;
-}
 
-th{
+.top-cart tbody tr:last-child>td{
+    border-bottom: 0;
+}
+.top-cart tbody>tr{
+    height: 10rem;
+}
+.top-cart th{
     font-weight: bold;
 }
 
-td{
-    
+.top-cart td{
+    border-bottom: 2px solid black;
     font-weight: 600;
 }
 
@@ -78,7 +80,7 @@ td{
 
 .bottom-cart{
     display: flex;
-    justify-content: center;
+    justify-content: end;
     align-items: center;
     gap: 1.5rem;
 }
