--- a/front-end/src/components/home/home.css
+++ b/front-end/src/components/home/home.css
@@ -21,6 +21,8 @@
     font-size: 0.938rem;
     color: #fff;
     margin: 0.5rem 0 1.4rem;
+    font-weight: 300;
+    letter-spacing: 1px;
 }
 
 .btn{
