styled admin main component

--- a/front-end/src/components/admin/header/header.css
+++ b/front-end/src/components/admin/header/header.css
@@ -1,5 +1,5 @@
 .header-admin {
-    background-color: aqua;
+    /* background-color: aqua; */
     position: fixed;
     top: 0;
     height: 100px;
