--- a/front-end/src/components/admin/main/main.css
+++ b/front-end/src/components/admin/main/main.css
@@ -19,3 +19,124 @@
     padding: 2rem;
     border-radius: 2px;
 }
+
+.card-single:last-child{
+    background: #1b1b1b;
+}
+
+.card-single:last-child h1,
+.card-single:last-child div:last-child span,
+.card-single:last-child div:first-child span{
+    color: #fff;
+}
+
+.card2{
+    background-color: #fff;
+}
+
+
+.card-header{
+    padding: 1rem;
+}
+
+.card-header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid #f0f0f0;
+}
+
+.card-header button{
+    background: #fe5b3b;
+    color: #fff;
+    padding: .5rem 1rem;
+    font-size: .8rem;
+    border-radius: 10px;
+    border: 1px solid #fe5b3b;
+}
+
+
+.carsTable{
+    border-collapse: collapse;
+}
+
+.carsTable thead tr{
+    border-top: 1px solid #f0f0f0;
+    border-bottom: 2px solid #f0f0f0;
+}
+
+.carsTable thead td{
+    font-weight: 700;
+}
+
+.carsTable td{
+    font-size: .9rem;
+    padding: .5rem 1rem;
+    color: #222;
+}
+
+.carsTable tr td:last-child{
+    display: flex;
+    align-items: center;
+}
+
+.carsTable td .status{
+   display: inline-block;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    margin-right: 1rem;
+}
+
+.status.purple{
+    background: mediumpurple;
+}
+
+.status.pink{
+    background: pink;
+}
+
+
+.status.orange{
+    background: coral;
+}
+
+.table-responsive{
+    width: 100%;
+    overflow-x: auto;
+}
+
+.customer{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: .5rem .7rem;
+}
+
+.info{
+    display: flex;
+    align-items: center;
+}
+
+.info img{
+    border-radius: 50%;
+    margin-right: 1rem;
+}
+
+.info h4{
+    font-size: .8rem;
+    font-weight: 700;
+    color: #222;
+}
+
+.info small{
+    font-weight: 600;
+    color: #999;
+}
+
+.contact2 span{
+    font-size: 1.2rem;
+    display: inline-block;
+    margin-left: .5rem;
+    color: #fe5b3b;
+}
